added villain legends and villain hovers

--- a/data-echoes/src/assets/data/7-nostalgia/villains_seasons.json
+++ b/data-echoes/src/assets/data/7-nostalgia/villains_seasons.json
@@ -1,1 +1,60 @@
-[{"villain":"mojo jojo","season":1.0,"word_count_for_line":2088},{"villain":"sedusa","season":1.0,"word_count_for_line":325},{"villain":"him","season":1.0,"word_count_for_line":181},{"villain":"gangreen gang","season":1.0,"word_count_for_line":134},{"villain":"talking dog","season":1.0,"word_count_for_line":50},{"villain":"smith family","season":1.0,"word_count_for_line":6},{"villain":"mojo jojo","season":2.0,"word_count_for_line":1524},{"villain":"smith family","season":2.0,"word_count_for_line":944},{"villain":"princess morbucks","season":2.0,"word_count_for_line":905},{"villain":"rowdyruff boys","season":2.0,"word_count_for_line":653},{"villain":"lenny","season":2.0,"word_count_for_line":268},{"villain":"amoeba boys","season":2.0,"word_count_for_line":248},{"villain":"him","season":2.0,"word_count_for_line":196},{"villain":"sedusa","season":2.0,"word_count_for_line":146},{"villain":"sandman","season":2.0,"word_count_for_line":109},{"villain":"talking dog","season":2.0,"word_count_for_line":1},{"villain":"mojo jojo","season":3.0,"word_count_for_line":1675},{"villain":"princess morbucks","season":3.0,"word_count_for_line":687},{"villain":"femme fatale","season":3.0,"word_count_for_line":350},{"villain":"gangreen gang","season":3.0,"word_count_for_line":275},{"villain":"rowdyruff boys","season":3.0,"word_count_for_line":267},{"villain":"him","season":3.0,"word_count_for_line":152},{"villain":"mojo jojo","season":4.0,"word_count_for_line":1489},{"villain":"him","season":4.0,"word_count_for_line":1016},{"villain":"bernie","season":4.0,"word_count_for_line":915},{"villain":"dick","season":4.0,"word_count_for_line":802},{"villain":"princess morbucks","season":4.0,"word_count_for_line":661},{"villain":"talking dog","season":4.0,"word_count_for_line":14},{"villain":"amoeba boys","season":4.0,"word_count_for_line":11},{"villain":"rowdyruff boys","season":4.0,"word_count_for_line":3},{"villain":"gangreen gang","season":5.0,"word_count_for_line":1321},{"villain":"talking dog","season":5.0,"word_count_for_line":683},{"villain":"princess morbucks","season":5.0,"word_count_for_line":608},{"villain":"him","season":5.0,"word_count_for_line":542},{"villain":"mojo jojo","season":5.0,"word_count_for_line":446},{"villain":"gnome","season":5.0,"word_count_for_line":348},{"villain":"amoeba boys","season":5.0,"word_count_for_line":343},{"villain":"rowdyruff boys","season":5.0,"word_count_for_line":103},{"villain":"smith family","season":5.0,"word_count_for_line":20},{"villain":"mojo jojo","season":6.0,"word_count_for_line":1958},{"villain":"sedusa","season":6.0,"word_count_for_line":346},{"villain":"rowdyruff boys","season":6.0,"word_count_for_line":322},{"villain":"him","season":6.0,"word_count_for_line":247},{"villain":"gangreen gang","season":6.0,"word_count_for_line":103},{"villain":"amoeba boys","season":6.0,"word_count_for_line":50},{"villain":"talking dog","season":6.0,"word_count_for_line":45}]
+{
+  "1": {
+    "mojo jojo": 2088,
+    "sedusa": 325,
+    "him": 181,
+    "gangreen gang": 134,
+    "talking dog": 50,
+    "smith family": 6
+  },
+  "2": {
+    "mojo jojo": 1524,
+    "smith family": 944,
+    "princess morbucks": 905,
+    "rowdyruff boys": 653,
+    "lenny": 268,
+    "amoeba boys": 248,
+    "him": 196,
+    "sedusa": 146,
+    "sandman": 109,
+    "talking dog": 1
+  },
+  "3": {
+    "mojo jojo": 1675,
+    "princess morbucks": 687,
+    "femme fatale": 350,
+    "gangreen gang": 275,
+    "rowdyruff boys": 267,
+    "him": 152
+  },
+  "4": {
+    "mojo jojo": 1489,
+    "him": 1016,
+    "bernie": 915,
+    "dick": 802,
+    "princess morbucks": 661,
+    "talking dog": 14,
+    "amoeba boys": 11,
+    "rowdyruff boys": 3
+  },
+  "5": {
+    "gangreen gang": 1321,
+    "talking dog": 683,
+    "princess morbucks": 608,
+    "him": 542,
+    "mojo jojo": 446,
+    "gnome": 348,
+    "amoeba boys": 343,
+    "rowdyruff boys": 103,
+    "smith family": 20
+  },
+  "6": {
+    "mojo jojo": 1958,
+    "sedusa": 346,
+    "rowdyruff boys": 322,
+    "him": 247,
+    "gangreen gang": 103,
+    "amoeba boys": 50,
+    "talking dog": 45
+  }
+}
