add new data with new episodes

--- a/data-echoes/src/assets/data/7-nostalgia/villains_seasons.json
+++ b/data-echoes/src/assets/data/7-nostalgia/villains_seasons.json
@@ -1,60 +1,67 @@
 {
   "1": {
-    "mojo jojo": 2088,
+    "mojo jojo": 2223,
+    "rowdyruff boys": 731,
+    "him": 531,
+    "fuzzy": 353,
     "sedusa": 325,
-    "him": 181,
-    "gangreen gang": 134,
-    "talking dog": 50,
+    "amoeba boys": 301,
+    "gangreen gang": 154,
     "smith family": 6
   },
+
   "2": {
-    "mojo jojo": 1524,
+    "mojo jojo": 1525,
     "smith family": 944,
     "princess morbucks": 905,
-    "rowdyruff boys": 653,
+    "rowdyruff boys": 759,
     "lenny": 268,
     "amoeba boys": 248,
     "him": 196,
     "sedusa": 146,
     "sandman": 109,
-    "talking dog": 1
+    "gangreen gang": 5
   },
+
   "3": {
     "mojo jojo": 1675,
     "princess morbucks": 687,
     "femme fatale": 350,
+    "rowdyruff boys": 298,
     "gangreen gang": 275,
-    "rowdyruff boys": 267,
-    "him": 152
+    "him": 152,
+    "fuzzy": 125
   },
+
   "4": {
     "mojo jojo": 1489,
     "him": 1016,
     "bernie": 915,
     "dick": 802,
     "princess morbucks": 661,
-    "talking dog": 14,
     "amoeba boys": 11,
     "rowdyruff boys": 3
   },
+
   "5": {
-    "gangreen gang": 1321,
-    "talking dog": 683,
+    "gangreen gang": 1327,
     "princess morbucks": 608,
     "him": 542,
     "mojo jojo": 446,
     "gnome": 348,
     "amoeba boys": 343,
-    "rowdyruff boys": 103,
+    "fuzzy": 185,
+    "rowdyruff boys": 108,
     "smith family": 20
   },
+
   "6": {
     "mojo jojo": 1958,
     "sedusa": 346,
-    "rowdyruff boys": 322,
+    "rowdyruff boys": 336,
     "him": 247,
-    "gangreen gang": 103,
+    "gangreen gang": 107,
     "amoeba boys": 50,
-    "talking dog": 45
+    "fuzzy": 4
   }
 }
