--- a/data-echoes/src/assets/data/7-nostalgia/good_seasons.json
+++ b/data-echoes/src/assets/data/7-nostalgia/good_seasons.json
@@ -1,28 +1,32 @@
 {
   "1": {
     "speakers": {
-      "253": 251,
-      "blossom": 2112,
-      "mojo jojo": 2088,
-      "narrator": 1778,
-      "bubbles": 1772,
-      "buttercup": 1365,
-      "mayor": 1292,
-      "professor": 1271,
-      "ms. bellum": 336,
+      "blossom": 3215,
+      "narrator": 2835,
+      "mojo jojo": 2223,
+      "bubbles": 2164,
+      "buttercup": 1871,
+      "professor": 1794,
+      "mayor": 1747,
+      "him": 531,
+      "ace": 406,
+      "ms. bellum": 378,
+      "fuzzy": 353,
       "sedusa": 325,
-      "ms. keane": 250
+      "man": 298,
+      "ms. keane": 254,
+      "253": 251
     },
-    "total": 12840
+    "total": 18590
   },
   "2": {
     "speakers": {
-      "blossom": 3554,
+      "blossom": 3556,
       "narrator": 3027,
-      "buttercup": 2134,
+      "buttercup": 2136,
       "bubbles": 1891,
       "professor": 1849,
-      "mojo jojo": 1524,
+      "mojo jojo": 1525,
       "ms. keane": 1222,
       "mayor": 1013,
       "princess morbucks": 905,
@@ -37,14 +41,14 @@
       "billy": 288,
       "lenny": 268
     },
-    "total": 20539
+    "total": 20544
   },
   "3": {
     "speakers": {
       "blossom": 3683,
       "professor": 2470,
-      "buttercup": 2096,
-      "bubbles": 1892,
+      "buttercup": 2097,
+      "bubbles": 1893,
       "mayor": 1731,
       "mojo jojo": 1675,
       "narrator": 1537,
@@ -54,10 +58,10 @@
       "announcer": 315,
       "woman": 280,
       "brick": 275,
-      "man": 266,
+      "man": 272,
       "ms. keane": 126
     },
-    "total": 17848
+    "total": 17856
   },
   "4": {
     "speakers": {
@@ -81,11 +85,11 @@
   },
   "5": {
     "speakers": {
-      "blossom": 3380,
-      "buttercup": 2066,
-      "bubbles": 1908,
-      "professor": 1871,
-      "narrator": 1149,
+      "blossom": 3521,
+      "buttercup": 2256,
+      "professor": 1983,
+      "bubbles": 1973,
+      "narrator": 1184,
       "mayor": 1145,
       "brian": 1041,
       "brick": 915,
@@ -94,29 +98,30 @@
       "him": 542,
       "mojo jojo": 446,
       "gnome": 362,
+      "man": 354,
+      "powerpuff girls": 335,
       "mr. green": 324,
-      "powerpuff girls": 316,
-      "man": 314,
       "bossman": 273,
       "ms. keane": 271,
       "ms. bellum": 44
     },
-    "total": 17658
+    "total": 18260
   },
   "6": {
     "speakers": {
-      "blossom": 2826,
-      "narrator": 2789,
-      "professor": 2619,
-      "buttercup": 2094,
+      "blossom": 2958,
+      "narrator": 2833,
+      "professor": 2687,
+      "buttercup": 2107,
       "mojo jojo": 1958,
-      "bubbles": 1940,
-      "mayor": 1064,
+      "bubbles": 1944,
+      "mayor": 1344,
       "sedusa": 346,
+      "man": 344,
       "ace": 257,
       "ms. keane": 219,
-      "ms. bellum": 180
+      "ms. bellum": 184
     },
-    "total": 16292
+    "total": 17181
   }
 }
