add stuff in the modal

--- a/data-echoes/src/assets/data/7-nostalgia/good_seasons.json
+++ b/data-echoes/src/assets/data/7-nostalgia/good_seasons.json
@@ -10,11 +10,11 @@
       "mayor": 1747,
       "him": 531,
       "ace": 406,
-      "ms. bellum": 378,
+      "ms bellum": 378,
       "fuzzy": 353,
       "sedusa": 325,
       "man": 298,
-      "ms. keane": 254,
+      "ms keane": 254,
       "253": 251
     },
     "total": 18590
@@ -27,11 +27,11 @@
       "bubbles": 1891,
       "professor": 1849,
       "mojo jojo": 1525,
-      "ms. keane": 1222,
+      "ms keane": 1222,
       "mayor": 1013,
       "princess morbucks": 905,
       "marianne": 507,
-      "ms. bellum": 421,
+      "ms bellum": 421,
       "harold": 373,
       "man": 335,
       "whitfield": 334,
@@ -53,13 +53,13 @@
       "mojo jojo": 1675,
       "narrator": 1537,
       "princess morbucks": 687,
-      "ms. bellum": 465,
+      "ms bellum": 465,
       "femme fatale": 350,
       "announcer": 315,
       "woman": 280,
       "brick": 275,
       "man": 272,
-      "ms. keane": 126
+      "ms keane": 126
     },
     "total": 17856
   },
@@ -73,13 +73,13 @@
       "narrator": 1143,
       "him": 1016,
       "bernie": 915,
-      "ms. keane": 904,
+      "ms keane": 904,
       "dick": 802,
       "princess morbucks": 661,
       "major glory": 630,
       "mayor": 428,
       "robin": 285,
-      "ms. bellum": 75
+      "ms bellum": 75
     },
     "total": 17905
   },
@@ -102,8 +102,8 @@
       "powerpuff girls": 335,
       "mr. green": 324,
       "bossman": 273,
-      "ms. keane": 271,
-      "ms. bellum": 44
+      "ms keane": 271,
+      "ms bellum": 44
     },
     "total": 18260
   },
@@ -119,8 +119,8 @@
       "sedusa": 346,
       "man": 344,
       "ace": 257,
-      "ms. keane": 219,
-      "ms. bellum": 184
+      "ms keane": 219,
+      "ms bellum": 184
     },
     "total": 17181
   }
