--- a/data-echoes/tsconfig.app.json
+++ b/data-echoes/tsconfig.app.json
@@ -3,10 +3,14 @@
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
+    "allowImportingTsExtensions": true,
     "composite": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "allowJs": true,
+    "moduleResolution": "node",
+    "lib": ["es2021", "DOM"]
   }
 }
