--- a/data-echoes/package.json
+++ b/data-echoes/package.json
@@ -2,9 +2,11 @@
   "name": "data-echoes",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
+    "build-docs": "npm run build && rm -rf ../docs && mv dist/ ../docs/",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
