--- a/data-echoes/tsconfig.json
+++ b/data-echoes/tsconfig.json
@@ -13,6 +13,7 @@
     "allowImportingTsExtensions": true,
     "noEmit": true,
     "moduleResolution": "node",
+    "module": "es2022",
     "lib": ["es2021"]
   },
   "include": [
