show only villain episodes on hover, with label

--- a/data-echoes/src/assets/data/7-nostalgia/villains_seasons.json
+++ b/data-echoes/src/assets/data/7-nostalgia/villains_seasons.json
@@ -60,8 +60,8 @@
     "sedusa": 346,
     "rowdyruff boys": 336,
     "him": 247,
+    "fuzzy": 136,
     "gangreen gang": 107,
-    "amoeba boys": 50,
-    "fuzzy": 4
+    "amoeba boys": 50
   }
 }
