add top files, separate modal component

--- a/7-nostalgia/ppg-seasons-1998.json
+++ b/7-nostalgia/ppg-seasons-1998.json
@@ -257,7 +257,7 @@
     "year": 1998,
     "season": "3",
     "episode_nr": "10",
-    "title": "The Headsuckers Moxy/Equal Fights",
+    "title": "The Headsucker's Moxy/Equal Fights",
     "description": "\"The Headsucker's Moxy\" There's a mysterious villain in town who's sucking pertinent information from the brains of powerful people and committing crimes. How do the Girls trap this sucker before his next victim is drained?"
   },
   {
