--- a/data-echoes/package.json
+++ b/data-echoes/package.json
@@ -14,7 +14,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@types/p5": "^1.7.3",
     "lodash": "^4.17.21",
+    "p5": "^1.8.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
