fix mixed up villains

--- a/data-echoes/package.json
+++ b/data-echoes/package.json
@@ -17,6 +17,7 @@
     "@types/p5": "^1.7.3",
     "lodash": "^4.17.21",
     "p5": "^1.8.0",
+    "p5.layers": "^1.0.2",
     "vue": "^3.3.4",
     "vue-meta": "^3.0.0-alpha.10",
     "vue-router": "^4.2.5"
