--- a/data-echoes/package.json
+++ b/data-echoes/package.json
@@ -15,9 +15,12 @@
   },
   "dependencies": {
     "@types/p5": "^1.7.3",
+    "gl-mat4": "^1.2.0",
+    "gl-vec2": "^1.3.0",
     "lodash": "^4.17.21",
     "p5": "^1.8.0",
     "p5.layers": "^1.0.2",
+    "regl": "^2.1.0",
     "vue": "^3.3.4",
     "vue-meta": "^3.0.0-alpha.10",
     "vue-router": "^4.2.5"
