--- a/data-echoes/package.json
+++ b/data-echoes/package.json
@@ -15,7 +15,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@types/d3": "^7.4.3",
     "@types/p5": "^1.7.3",
+    "d3-hierarchy": "^3.1.2",
+    "d3-selection": "^3.0.0",
+    "d3-shape": "^3.2.0",
     "gl-mat4": "^1.2.0",
     "gl-vec2": "^1.3.0",
     "lodash": "^4.17.21",
