--- a/data-echoes/package.json
+++ b/data-echoes/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/d3": "^7.4.3",
     "@types/p5": "^1.7.3",
+    "d3-array": "^3.2.4",
     "d3-hierarchy": "^3.1.2",
     "d3-selection": "^3.0.0",
     "d3-shape": "^3.2.0",
