--- a/data-echoes/package.json
+++ b/data-echoes/package.json
@@ -19,6 +19,7 @@
     "@types/p5": "^1.7.3",
     "@vueuse/core": "^10.7.0",
     "d3-array": "^3.2.4",
+    "d3-force": "^3.0.0",
     "d3-hierarchy": "^3.1.2",
     "d3-selection": "^3.0.0",
     "d3-shape": "^3.2.0",
