--- a/data-echoes/package.json
+++ b/data-echoes/package.json
@@ -29,6 +29,7 @@
     "p5": "^1.8.0",
     "p5.layers": "^1.0.2",
     "regl": "^2.1.0",
+    "seedrandom": "^3.0.5",
     "three": "^0.160.1",
     "vue": "^3.3.4",
     "vue-meta": "^3.0.0-alpha.10",
@@ -39,6 +40,7 @@
     "@tsconfig/node18": "^18.2.2",
     "@types/lodash": "^4.14.200",
     "@types/node": "^18.18.5",
+    "@types/seedrandom": "^3.0.8",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
