--- a/data-echoes/package.json
+++ b/data-echoes/package.json
@@ -41,6 +41,7 @@
     "@types/lodash": "^4.14.200",
     "@types/node": "^18.18.5",
     "@types/seedrandom": "^3.0.8",
+    "@types/three": "^0.163.0",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
